--- a/fe/package.json
+++ b/fe/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "antd": "^5.26.7",
+    "axios": "^1.11.0",
     "openai": "^5.12.0",
     "react": "^19.1.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-router": "^7.8.0",
+    "react-router-dom": "^7.8.0",
     "react-use-websocket": "^4.13.0",
     "zustand": "^5.0.7"
   },
