--- a/fe/package.json
+++ b/fe/package.json
@@ -22,6 +22,7 @@
     "react-router": "^7.8.0",
     "react-router-dom": "^7.8.0",
     "react-use-websocket": "^4.13.0",
+    "socket.io-client": "^4.8.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
